working on the admin issues

--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -94,10 +94,10 @@
                     <a href="{{ url_for('admin.courses') }}" class="list-group-item list-group-item-action">
                         <i class="fas fa-book me-2"></i> Manage Courses
                     </a>
-                    <a href="#" class="list-group-item list-group-item-action">
+                    <a href="{{ url_for('admin.system_settings') }}" class="list-group-item list-group-item-action">
                         <i class="fas fa-cog me-2"></i> System Settings
                     </a>
-                    <a href="#" class="list-group-item list-group-item-action">
+                    <a href="{{ url_for('admin.reports') }}" class="list-group-item list-group-item-action">
                         <i class="fas fa-chart-bar me-2"></i> View Reports
                     </a>
                 </div>
